Fix dark mode

--- a/front/src/styles/default.scss
+++ b/front/src/styles/default.scss
@@ -1,6 +1,9 @@
 // Default theme
 
 :root {
+	--sj-c-bg: rgb(var(--sj-rgb-bg));
+	--sj-c-fg: rgb(var(--sj-rgb-fg));
+
 	font-family: var(--sj-ff-ui);
 	font-weight: 400;
 
